--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@angular/platform-server": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@angular/ssr": "^17.3.11",
+    "@ui5/webcomponents": "^2.14.0",
+    "@ui5/webcomponents-fiori": "^2.14.0",
     "express": "^4.18.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
